--- a/FilterSymbols/Pages/About.cshtml
+++ b/FilterSymbols/Pages/About.cshtml
@@ -6,4 +6,4 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@Model.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Use the search box on the home page to filter the list of symbols supported on the IEX platform.</p>
