--- a/FilterSymbols/Pages/Index.cshtml
+++ b/FilterSymbols/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 
 <form>
     <p>
-        Title: <input type="text" name="SearchString">
+        Name contains: <input type="text" name="SearchString">
         <input type="submit" value="Filter" />
     </p>
 </form>
